# site-control-kit

./: .gitignore  AGENTS.md  AGENT_START_HERE.md  AUTOPILOT.yaml  BROWSER_QUICKSTART.md  CODEX_STATE.md  README.md  START_HERE_AGENT_RU.md  browser.cmd  browser.ps1  browser.sh  pyproject.toml  start-browser.sh  start-firefox.sh  start-hub.cmd  start-hub.ps1  start-telegram-firefox.sh  start-telegram.sh  telegram-export.sh
docs/: AI_MAINTAINER_GUIDE.md  API.md  ARCHITECTURE.md  CHANGES_RU.md  EXTENSION.md  INSTALL_OTHER_DEVICES_RU.md  PROJECT_STATUS_RU.md  PROJECT_WORKFLOW_RU.md  SECURITY.md  SERVER_BROWSER_ACCESS.md  TELEGRAM_CLIENT_ROADMAP_RU.md  TELEGRAM_INVITE_EXECUTOR_RU.md  TELEGRAM_INVITE_MANAGER_RU.md  TELEGRAM_PORTABLE_RU.md  TROUBLESHOOTING.md
examples/: clear-editable.json  context-click.json  fill-and-click.json  navigate.json  new-tab.json  press-enter.json  reload-tab.json  script.json
extension/: background.js  content.js  manifest.json  options.html  options.js  popup.html  popup.js  styles.css
scripts/: auto_collect_usernames.sh  browser.cmd  browser.ps1  browser.sh  collect_new_telegram_contacts.sh  collect_new_telegram_contacts_chain.sh  export_feishu_bundle.py  export_telegram_chat_mentions.py  export_telegram_members_non_pii.py  package_extension.cmd  package_extension.ps1  package_extension.sh  reload_bridge_extension.sh  run_chat_export_once.sh  start_browser.sh  start_browser_novnc.sh  start_firefox.sh  start_hub.cmd  start_hub.ps1  start_hub.sh  start_telegram.sh  stop_browser_novnc.sh  telegram_api_accounts.py  telegram_cdp_helper.js  (+18 more)
(+210 files in other folders)
